don't set passenger details in conf, done in separate conf file

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -63,8 +63,8 @@ http {
   # Uncomment it if you installed passenger or passenger-enterprise
   ##
 
-  passenger_root {{ passenger_root }};
-  passenger_ruby {{ passenger_ruby }};
+  # passenger_root {{ passenger_root }};
+  # passenger_ruby {{ passenger_ruby }};
 
   ##
   # Virtual Host Configs
